# dino

./: .gitignore  CMakeLists.txt  README.en.md  README.md
docs/: BUILD_SDL_MIXER.md
include/: constant.h  object_location.h
include/screen/: gameplay.h  lobby.h
include/ui/: button.h  ui.h
src/: CMakeLists.txt  main.cpp
src/screen/: .lobby.cpp.swp  CMakeLists.txt  gameplay.cpp  lobby.cpp
src/ui/: CMakeLists.txt  ui.cpp
